Wrote Css for the website and html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
 	<title>Dani Maldonado</title>
 	<link rel="icon" href="img/Dani.jpg">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
 		<img src="img/Dani.jpg">
-		<h1>Daniela Maldonado San Vicente</h1>
+		<h1>Daniela Maldonado<br>
+		San Vicente</h1>
 	</header>
 
 	<!-- main elements -->
@@ -17,7 +20,7 @@
 		<h2>About Me</h2>
 		<p>I´m a industrial designer, passionate about sports, mainly soccer and tennis.</p>
 		<img src="img/Futbol.jpg">
-		<p>Watching Arsenal at London.</p>
+		<p class="caption">Watching Arsenal at London.</p>
 		<h2>What I love to do</h2>
 		<ol>
 			<li>Love to learn.</li>
